Set color selection button background to the colors they represent

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>HNG Level 1 | Color Game</title>
   </head>
   <body>
     <h2 data-testid="score" id="score">Score: 0</h2>
@@ -22,7 +22,7 @@
       <input type="button" value="pink" data-testid="colorOption" id="pink-button" class="color-option">
     </div>
 
-    <input type="button" value="reset" data-testid="newGameButton" id="reset-score">
+    <input type="button" value="new game" data-testid="newGameButton" id="reset-score">
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
