--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       Guess the correct colour of the above box.
     </h1>
     <div class="color-options">
-      <input type="button" value="red" data-testid="colorOption" id="red-button" class="color-option">
-      <input type="button" value="blue" data-testid="colorOption" id="blue-button" class="color-option">
-      <input type="button" value="yellow" data-testid="colorOption" id="yellow-button" class="color-option">
-      <input type="button" value="green" data-testid="colorOption" id="green-button" class="color-option">
-      <input type="button" value="purple" data-testid="colorOption" id="purple-button" class="color-option">
-      <input type="button" value="pink" data-testid="colorOption" id="pink-button" class="color-option">
+      <input type="button" value="cyan" data-testid="colorOption" id="red-button" class="color-option">
+      <input type="button" value="aqua" data-testid="colorOption" id="blue-button" class="color-option">
+      <input type="button" value="aquamarine" data-testid="colorOption" id="yellow-button" class="color-option">
+      <input type="button" value="skyblue" data-testid="colorOption" id="green-button" class="color-option">
+      <input type="button" value="turquoise" data-testid="colorOption" id="purple-button" class="color-option">
+      <input type="button" value="teal" data-testid="colorOption" id="pink-button" class="color-option">
     </div>
 
     <input type="button" value="new game" data-testid="newGameButton" id="reset-score">
